--- a/package.json
+++ b/package.json
@@ -22,23 +22,25 @@
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\""
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.490.0",
-    "@aws-sdk/lib-dynamodb": "^3.490.0",
     "@aws-sdk/client-api-gateway": "^3.490.0",
-    "@aws-sdk/client-lambda": "^3.490.0",
+    "@aws-sdk/client-dynamodb": "^3.490.0",
     "@aws-sdk/client-eventbridge": "^3.490.0",
+    "@aws-sdk/client-lambda": "^3.490.0",
+    "@aws-sdk/lib-dynamodb": "^3.490.0",
     "bcryptjs": "^2.4.3",
-    "zod": "^3.22.4",
-    "date-fns": "^3.0.6"
+    "date-fns": "^3.0.6",
+    "uuid": "^13.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jest": "^29.5.11",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
     "@cucumber/cucumber": "^10.3.1",
     "@playwright/test": "^1.41.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.5",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "aws-sdk-client-mock": "^3.0.0",
     "dynamodb-local": "^0.0.25",
     "eslint": "^8.56.0",
@@ -54,4 +56,3 @@
     "node": ">=20.0.0"
   }
 }
-
